--- a/CSS/navbar.html
+++ b/CSS/navbar.html
@@ -18,7 +18,7 @@
 
     <style>
         body {
-            background: #000;
+            background: #100f0f;
             color: white;
             font-family: montserrat, sans-serif;
             margin: 0;
@@ -83,6 +83,54 @@
             border-radius: 5px;
             cursor: pointer;
         }
+
+        .nav2 {
+            background-color: #76c16c;
+            width: 200px;
+            padding: 20px;
+        }
+
+        .nav2 ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        .nav2 li {
+            margin-bottom: 12px;
+
+        }
+
+        .nav2 a {
+            text-decoration: none;
+            color: #fff;
+            display: block;
+            padding: 10px;
+            width: 100%;
+        }
+
+        .nav2 a:hover {
+            background-color: #1b1b1b;
+            color: #fffefe;
+            transition: 0.01s ease-in-out;
+        }
+
+        .nav2 .login-btn {
+            background-color: rgb(87, 138, 57);
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            /* border-radius: 5px; */
+            cursor: pointer;
+            width: 100%;
+        }
+
+        .nav2 .login-btn:hover {
+            background-color: rgb(84, 158, 41);
+
+        }
+
+
     </style>
 </head>
 
@@ -102,8 +150,23 @@
     </div>
 
 
+    <div class="nav-container">
+        <h1>WEB DEV 2</h1>
+
+        <nav class="nav2">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Products</a></li>
+                <li><button class="login-btn">Login</button></li>
+            </ul>
+        </nav>
+        <p>variation 2: vertical with hover effect</p>
+    </div>
+    
     <div class="nav-container"></div>
-    <div class="nav-container"></div>
+
+
 </body>
 
 </html>
