--- a/CSS/navbar.html
+++ b/CSS/navbar.html
@@ -22,7 +22,7 @@
             color: white;
             font-family: montserrat, sans-serif;
             margin: 0;
-            font-size: 20px;
+            /* font-size: 20px; */
         }
 
         .nav-container {
@@ -44,6 +44,7 @@
             padding: 0;
             display: flex;
             justify-content: space-around;
+            align-items: center;
         }
 
         .nav1 li {
@@ -130,13 +131,43 @@
 
         }
 
+        .nav3 {
+            background-color: #bd7272;
+            padding: 8px;
+        }
 
+        .nav3 ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+        }
+
+        .nav3 a {
+            text-decoration: none;
+            color: #fff;
+            padding: 10px;
+            display: block;
+        }
+
+        .nav3 .dropdown-content {
+            display: none;
+        }
+
+        .nav3 .dropdown:hover .dropdown-content {
+            display: block;
+            position: absolute;
+            background-color: #b77676;
+            min-width: 120px;
+        }
     </style>
 </head>
 
 <body>
     <div class="nav-container">
-        <h1>WEB DEV</h1>
+        <h1>WEB DEV 1</h1>
 
         <nav class="nav1">
             <ul>
@@ -163,8 +194,28 @@
         </nav>
         <p>variation 2: vertical with hover effect</p>
     </div>
-    
-    <div class="nav-container"></div>
+
+    <div class="nav-container">
+        <h1>WEB DEV 3</h1>
+
+        <nav class="nav3">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <!-- <li><a href="#">About</a></li> -->
+                <li class="dropdown">
+                    <a href="#">About</a>
+                    <div class="dropdown-content">
+                        <a href="#">Our Story</a>
+                        <a href="#">Team</a>
+                        <a href="#">Contact</a>
+                    </div>
+                </li>
+                <li><a href="#">Products</a></li>
+                <li><button class="login-btn">Login</button></li>
+            </ul>
+        </nav>
+        <p>variation 1: Horizontal with dropdown effect</p>
+    </div>
 
 
 </body>
