--- a/CSS/06_flexbox/flexbox.html
+++ b/CSS/06_flexbox/flexbox.html
@@ -153,7 +153,7 @@
     </div>
     <div class="container">
         <h2>7. Flex grow : </h2>
-        <div class="flex-container" style="">
+        <div class="flex-container" style="flex-grow: 1;">
             <div class="circle pastel1">1</div>
             <div class="circle pastel2">2</div>
             <div class="circle pastel3">3</div>
