--- a/CSS/grid/gridmasterclasses.html
+++ b/CSS/grid/gridmasterclasses.html
@@ -66,53 +66,64 @@
             <div class="box">9</div>
         </div>
     </div>
-</body>
 
-<div class="container">
-    <h2>1. Gridwith different colume sizes .</h2>
-    <div class="grid-container" style="grid-template-columns: 1fr 2fr 1fr;">
-        <div class="box">1</div>
-        <div class="box">2</div>
-        <div class="box">3</div>
+
+    <div class="container">
+        <h2>1. Gridwith different colume sizes .</h2>
+        <div class="grid-container" style="grid-template-columns: 1fr 2fr 1fr;">
+            <div class="box">1</div>
+            <div class="box">2</div>
+            <div class="box">3</div>
+        </div>
     </div>
-</div>
 
-<div class="container">
-    <h2>1. Grid with Gaps .</h2>
-    <div class="grid-container" style="grid-template-columns: repeat(3, 1fr);
+    <div class="container">
+        <h2>1. Grid with Gaps .</h2>
+        <div class="grid-container" style="grid-template-columns: repeat(3, 1fr);
         gap: 20px;">
-        <div class="box">1</div>
-        <div class="box">2</div>
-        <div class="box">3</div>
+            <div class="box">1</div>
+            <div class="box">2</div>
+            <div class="box">3</div>
+        </div>
     </div>
-</div>
 
 
-<div class="container">
-    <h2>1. Grid Items Placement. .</h2>
-    <div class="grid-container" style="grid-template-columns: repeat(3,1fr);
+    <div class="container">
+        <h2>1. Grid Items Placement. .</h2>
+        <div class="grid-container" style="grid-template-columns: repeat(3,1fr);
     grid-template-rows: repeat(3,100px);">
 
-        <div class="box" style="grid-column: 1/3;grid-row: 1/3; ">1</div>
-        <div class="box">2</div>
-        <div class="box">3</div>
-        <div class="box">4</div>
-        <div class="box" style="grid-column: 2/4;">5</div>
+            <div class="box" style="grid-column: 1/3;grid-row: 1/3; ">1</div>
+            <div class="box">2</div>
+            <div class="box">3</div>
+            <div class="box">4</div>
+            <div class="box" style="grid-column: 2/4;">5</div>
 
+        </div>
     </div>
-</div>
 
-<div class="container">
-    <h2>1. Grid Template Areas .</h2>
-    <div class="grid-container"
-        style="grid-template-areas: 'header header header header ' 'sidebar main main main' 'footer footer footer footer ';">
-        <div class="box" style="grid-area: header;">Header</div>
-        <div class="box" style="grid-area: sidebar;">Sidebar</div>
-        <div class="box" style="grid-area: main;">Main content</div>
-        <div class="box" style="grid-area: footer;">Footer</div>
+    <div class="container">
+        <h2>1. Grid Template Areas .</h2>
+        <div class="grid-container"
+            style="grid-template-areas: 'header header header header ' 'sidebar main main main' 'footer footer footer footer ';">
+            <div class="box" style="grid-area: header;">Header</div>
+            <div class="box" style="grid-area: sidebar;">Sidebar</div>
+            <div class="box" style="grid-area: main;">Main content</div>
+            <div class="box" style="grid-area: footer;">Footer</div>
+        </div>
     </div>
-</div>
 
+    <div class="container">
+        <h2>1. Auto fit and min-max. </h2>
+        <div class="grid-container" style="grid-template-columns: repeat(auto-fit, min-max(100px, 1fr)) ">
+            <div class="box">1</div>
+            <div class="box">2</div>
+            <div class="box">3</div>
+            <div class="box">4</div>
+            <div class="box">5</div>
+        </div>
+    </div>
 
+</body>
 
 </html>
